// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEFAULT_FIELDS_CONFIG parseFieldsConfig should not throw given the locale is en-GB 1`] = `
Array [
  StringFieldDefinition {
    "dataKey": "first_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "First name",
    "name": "firstName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "First name should contain only letters and be 2-50 characters long.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "last_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Last name",
    "name": "lastName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Last name should contain only letters and be 2-50 characters long.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "contact_email",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Contact email",
    "name": "contactEmail",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid email address.",
      "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,256}$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "gender",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Gender",
    "name": "gender",
    "questionText": undefined,
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Male",
      "Female",
    ],
  },
  StringFieldDefinition {
    "dataKey": "age",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Age",
    "name": "age",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid age. You must be at 16 years old or older to participate.",
      "pattern": "^(?:1[6-9]|[2-9][0-9]|1[01][0-9]|120)$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "education_status",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Education",
    "name": "educationStatus",
    "questionText": "What is the highest level of education you have completed?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Less than primary / no formal education",
      "Primary",
      "Secondary",
      "College / Diploma",
      "University degree",
      "Postgraduate degree",
    ],
  },
  EnumFieldDefinition {
    "dataKey": "main_activity",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Main activity",
    "name": "mainActivity",
    "questionText": "In the last 30 days, what was your main activity in terms of time spent?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Worked for wages",
      "Worked for my own account (trader, shopkeeper, barber, dressmaker)",
      "Worked as a volunteer",
      "Worked as intern or apprentice",
      "In school, university, or training",
      "Unemployed",
    ],
  },
]
`;

exports[`DEFAULT_FIELDS_CONFIG parseFieldsConfig should not throw given the locale is en-US 1`] = `
Array [
  StringFieldDefinition {
    "dataKey": "first_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "First name",
    "name": "firstName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "First name should contain only letters and be 2-50 characters long.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "last_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Last name",
    "name": "lastName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Last name should contain only letters and be 2-50 characters long.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "contact_email",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Contact email",
    "name": "contactEmail",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid email address.",
      "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,256}$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "gender",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Gender",
    "name": "gender",
    "questionText": undefined,
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Male",
      "Female",
    ],
  },
  StringFieldDefinition {
    "dataKey": "age",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Age",
    "name": "age",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid age. You must be at 16 years old or older to participate.",
      "pattern": "^(?:1[6-9]|[2-9][0-9]|1[01][0-9]|120)$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "education_status",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Education",
    "name": "educationStatus",
    "questionText": "What is the highest level of education you have completed?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Less than primary / no formal education",
      "Primary",
      "Secondary",
      "College / Diploma",
      "University degree",
      "Postgraduate degree",
    ],
  },
  EnumFieldDefinition {
    "dataKey": "main_activity",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Main activity",
    "name": "mainActivity",
    "questionText": "In the last 30 days, what was your main activity in terms of time spent?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Worked for wages",
      "Worked for my own account (trader, shopkeeper, barber, dressmaker)",
      "Worked as a volunteer",
      "Worked as intern or apprentice",
      "In school, university, or training",
      "Unemployed",
    ],
  },
]
`;

exports[`DEFAULT_FIELDS_CONFIG parseFieldsConfig should not throw given the locale is es-AR 1`] = `
Array [
  StringFieldDefinition {
    "dataKey": "first_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Nombre",
    "name": "firstName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "El nombre debe contener solo letras y tener entre 2 y 50 caracteres.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "last_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Apellido",
    "name": "lastName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "El apellido debe contener solo letras y tener entre 2 y 50 caracteres.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "contact_email",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Correo electrónico de contacto",
    "name": "contactEmail",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Por favor, ingrese una dirección de correo electrónico válida.",
      "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,256}$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "gender",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Género",
    "name": "gender",
    "questionText": undefined,
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Hombre",
      "Mujer",
    ],
  },
  StringFieldDefinition {
    "dataKey": "age",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Edad",
    "name": "age",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Por favor ingrese una edad válida. Debe tener 16 años o más para participar.",
      "pattern": "^(?:1[6-9]|[2-9][0-9]|1[01][0-9]|120)$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "education_status",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Educación",
    "name": "educationStatus",
    "questionText": "¿Cuál es el nivel educativo más alto que ha completado?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Menos que primaria / sin educación formal",
      "Primaria",
      "Secundaria",
      "Colegio / Diploma",
      "Título universitario",
      "Posgrado",
    ],
  },
  EnumFieldDefinition {
    "dataKey": "main_activity",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Actividad principal",
    "name": "mainActivity",
    "questionText": "En los últimos 30 días, ¿cuál fue su actividad principal en términos de tiempo dedicado?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Trabajé por salario",
      "Trabajé por cuenta propia (comerciante, tendero, barbero, modista)",
      "Trabajé como voluntario",
      "Trabajé como pasante o aprendiz",
      "Estuve en la escuela, universidad o capacitación",
      "Desempleado",
    ],
  },
]
`;

exports[`DEFAULT_FIELDS_CONFIG parseFieldsConfig should not throw given the locale is es-ES 1`] = `
Array [
  StringFieldDefinition {
    "dataKey": "first_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Nombre",
    "name": "firstName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "El nombre debe contener solo letras y tener entre 2 y 50 caracteres.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "last_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Apellido",
    "name": "lastName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "El apellido debe contener solo letras y tener entre 2 y 50 caracteres.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "contact_email",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Correo electrónico de contacto",
    "name": "contactEmail",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Por favor, ingrese una dirección de correo electrónico válida.",
      "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,256}$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "gender",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Género",
    "name": "gender",
    "questionText": undefined,
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Hombre",
      "Mujer",
    ],
  },
  StringFieldDefinition {
    "dataKey": "age",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Edad",
    "name": "age",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Por favor ingrese una edad válida. Debe tener 16 años o más para participar.",
      "pattern": "^(?:1[6-9]|[2-9][0-9]|1[01][0-9]|120)$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "education_status",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Educación",
    "name": "educationStatus",
    "questionText": "¿Cuál es el nivel educativo más alto que ha completado?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Menos que primaria / sin educación formal",
      "Primaria",
      "Secundaria",
      "Colegio / Diploma",
      "Título universitario",
      "Posgrado",
    ],
  },
  EnumFieldDefinition {
    "dataKey": "main_activity",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Actividad principal",
    "name": "mainActivity",
    "questionText": "En los últimos 30 días, ¿cuál fue su actividad principal en términos de tiempo dedicado?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Trabajé por salario",
      "Trabajé por cuenta propia (comerciante, tendero, barbero, modista)",
      "Trabajé como voluntario",
      "Trabajé como pasante o aprendiz",
      "Estuve en la escuela, universidad o capacitación",
      "Desempleado",
    ],
  },
]
`;

exports[`DEFAULT_FIELDS_CONFIG parseFieldsConfig should not throw given the locale is ny-ZM 1`] = `
Array [
  StringFieldDefinition {
    "dataKey": "first_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Dzina loyamba",
    "name": "firstName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Dzina loyamba liyenera kukhala ndi zilembo zokha komanso kukhala pakati pa 2 ndi 50 zilembo.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "last_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Dzina la familia",
    "name": "lastName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Dzina la familia liyenera kukhala ndi zilembo zokha komanso kukhala pakati pa 2 ndi 50 zilembo.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "contact_email",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Contact email",
    "name": "contactEmail",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid email address.",
      "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,256}$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "gender",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Gender",
    "name": "gender",
    "questionText": undefined,
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Male",
      "Female",
    ],
  },
  StringFieldDefinition {
    "dataKey": "age",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Age",
    "name": "age",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid age. You must be at 16 years old or older to participate.",
      "pattern": "^(?:1[6-9]|[2-9][0-9]|1[01][0-9]|120)$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "education_status",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Education",
    "name": "educationStatus",
    "questionText": "What is the highest level of education you have completed?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Less than primary / no formal education",
      "Primary",
      "Secondary",
      "College / Diploma",
      "University degree",
      "Postgraduate degree",
    ],
  },
  EnumFieldDefinition {
    "dataKey": "main_activity",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Main activity",
    "name": "mainActivity",
    "questionText": "In the last 30 days, what was your main activity in terms of time spent?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Worked for wages",
      "Worked for my own account (trader, shopkeeper, barber, dressmaker)",
      "Worked as a volunteer",
      "Worked as intern or apprentice",
      "In school, university, or training",
      "Unemployed",
    ],
  },
]
`;

exports[`DEFAULT_FIELDS_CONFIG parseFieldsConfig should not throw given the locale is pt-MZ 1`] = `
Array [
  StringFieldDefinition {
    "dataKey": "first_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "First name",
    "name": "firstName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "First name should contain only letters and be 2-50 characters long.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "last_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Last name",
    "name": "lastName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Last name should contain only letters and be 2-50 characters long.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "contact_email",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Contact email",
    "name": "contactEmail",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid email address.",
      "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,256}$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "gender",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Gender",
    "name": "gender",
    "questionText": undefined,
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Male",
      "Female",
    ],
  },
  StringFieldDefinition {
    "dataKey": "age",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Age",
    "name": "age",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid age. You must be at 16 years old or older to participate.",
      "pattern": "^(?:1[6-9]|[2-9][0-9]|1[01][0-9]|120)$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "education_status",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Education",
    "name": "educationStatus",
    "questionText": "What is the highest level of education you have completed?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Less than primary / no formal education",
      "Primary",
      "Secondary",
      "College / Diploma",
      "University degree",
      "Postgraduate degree",
    ],
  },
  EnumFieldDefinition {
    "dataKey": "main_activity",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Main activity",
    "name": "mainActivity",
    "questionText": "In the last 30 days, what was your main activity in terms of time spent?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Worked for wages",
      "Worked for my own account (trader, shopkeeper, barber, dressmaker)",
      "Worked as a volunteer",
      "Worked as intern or apprentice",
      "In school, university, or training",
      "Unemployed",
    ],
  },
]
`;

exports[`DEFAULT_FIELDS_CONFIG parseFieldsConfig should not throw given the locale is sw-KE 1`] = `
Array [
  StringFieldDefinition {
    "dataKey": "first_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Jina la kwanza",
    "name": "firstName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Jina la kwanza linapaswa kuwa na herufi tu na kuwa kati ya herufi 2-50.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "last_name",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Jina la familia",
    "name": "lastName",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Jina la familia linapaswa kuwa na herufi tu na kuwa kati ya herufi 2-50.",
      "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)(?!.*(\\\\..*){5,})[\\\\p{L}\\\\s\\\\.]{2,50}$",
    },
  },
  StringFieldDefinition {
    "dataKey": "contact_email",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Contact email",
    "name": "contactEmail",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid email address.",
      "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,256}$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "gender",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Gender",
    "name": "gender",
    "questionText": undefined,
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Male",
      "Female",
    ],
  },
  StringFieldDefinition {
    "dataKey": "age",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Age",
    "name": "age",
    "questionText": undefined,
    "required": true,
    "type": "STRING",
    "validation": Object {
      "errorMessage": "Please enter a valid age. You must be at 16 years old or older to participate.",
      "pattern": "^(?:1[6-9]|[2-9][0-9]|1[01][0-9]|120)$",
    },
  },
  EnumFieldDefinition {
    "dataKey": "education_status",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Education",
    "name": "educationStatus",
    "questionText": "What is the highest level of education you have completed?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Less than primary / no formal education",
      "Primary",
      "Secondary",
      "College / Diploma",
      "University degree",
      "Postgraduate degree",
    ],
  },
  EnumFieldDefinition {
    "dataKey": "main_activity",
    "defaultValue": undefined,
    "encrypt": true,
    "label": "Main activity",
    "name": "mainActivity",
    "questionText": "In the last 30 days, what was your main activity in terms of time spent?",
    "required": true,
    "type": "ENUM",
    "values": Array [
      "Worked for wages",
      "Worked for my own account (trader, shopkeeper, barber, dressmaker)",
      "Worked as a volunteer",
      "Worked as intern or apprentice",
      "In school, university, or training",
      "Unemployed",
    ],
  },
]
`;
